# CN230_tooket-ther

./: .env.example  .gitignore  ERD2.html  README.md  alembic.ini  app.py  config.py  docker-compose.yml  erd.md  flow_plan.md  models.py  plan.md  pyproject.toml  queries.sql  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_concert_host_country.py  003_concert_poster_lineup.py  6e36bd730954_describe_change.py
database/: schema.sql  seed.sql
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/src/components/: CountdownTimer.module.css  CountdownTimer.tsx  Header.module.css  Header.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.ts
frontend/src/styles/: components.css
plan/: flow_plan.md  implement_plan.md
plans/: design_plan.md  plan.md
routes/: auth.py  booking.py
scripts/: seed_data.py
stupid/: ERD.html
tests/integration/: test_concurrency.py
tests/unit/: test_priority.py  test_refund_policy.py
tooket_ther/: __init__.py
tooket_ther/app/: __init__.py  config.py  database.py  main.py
tooket_ther/app/api/: deps.py
tooket_ther/app/core/: __init__.py  jwt_tokens.py
tooket_ther/app/domain/: __init__.py  priority.py  refund_policy.py
tooket_ther/app/integrations/: __init__.py
tooket_ther/app/models/: __init__.py  booking.py  concert.py  enums.py  ledger.py  queue.py  user.py
tooket_ther/app/repositories/: __init__.py  concert_repo.py  queue_repo.py  seat_repo.py  user_repo.py
tooket_ther/app/schemas/: __init__.py  (+9 more)
(+51 files in other folders)
